--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # SonarQube Configuration
-sonar.projectKey=rafsanulhasan_arangodb-net-standard
+sonar.projectKey=rafsanulhasan_n8n_practice
 sonar.organization=rafsanulhasan
 
 # Project Information
@@ -10,8 +10,8 @@ sonar.projectVersion=1.0
 sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/volumes/**
 
-# SonarCloud Configuration
-sonar.host.url=https://sonarcloud.io
+# Local SonarQube Configuration (for manual analysis)
+sonar.host.url=https://lacey-predial-brianne.ngrok-free.dev
 
 # Language-specific settings
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
