Update SonarQube configuration: change host URL for local analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,8 @@ sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/volumes/**
 
 # Local SonarQube Configuration (for manual analysis)
-sonar.host.url=https://lacey-predial-brianne.ngrok-free.dev
+sonar.host.url=http://host.docker.internal:9000
+sonar.core.serverBaseURL=https://lacey-predial-brianne.ngrok-free.dev
 
 # Language-specific settings
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
