--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,8 +11,9 @@ sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/volumes/**
 
 # Local SonarQube Configuration (for manual analysis)
-sonar.host.url=http://host.docker.internal:9000
+sonar.host.url=https://lacey-predial-brianne.ngrok-free.dev
 sonar.core.serverBaseURL=https://lacey-predial-brianne.ngrok-free.dev
+  -Dsonar.token=sqp_606322cdad48a75c60c9d397c54091bb709fe9d2 \
 
 # Language-specific settings
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
