Refine .gitignore to include all SonarQube subdirectories and remove specific exclusions for data, logs, and extensions

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # Volumes
 volumes/
-!volumes/sonarqube/data
-!volumes/sonarqube/logs
-!volumes/sonarqube/extensions
+!volumes/sonarqube/
+!volumes/sonarqube/**
 
 # IDE folders
 .vscode/
