Refactor code structure for improved readability and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 volumes/
 !volumes/sonarqube/
 !volumes/sonarqube/**
-!volumes/sonarqube/logs/*.log
+volumes/sonarqube/logs
 
 # IDE folders
 .vscode/
