--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 volumes/
 !volumes/sonarqube/
 !volumes/sonarqube/**
-volumes/sonarqube/logs
+volumes/sonarqube/logs/
+volumes/sonarqube/logs/**
 
 # IDE folders
 .vscode/
