Add unit and integration tests for N8nWebhookClient with coverage support
- Created N8nWebhookClient.UnitTests and N8nWebhookClient.IntegrationTests projects
- Implemented sample tests demonstrating best practices using NUnit, bUnit, NSubstitute, and Bogus
- Updated README.Tests.md with comprehensive testing instructions and examples
- Enhanced build workflow to include test execution and coverage reporting
- Updated .gitignore to exclude coverage and test result files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: bash
         run: |
-          ${{ runner.temp }}/scanner/dotnet-sonarscanner begin /k:"rafsanulhasan_n8n_practice" /o:"rafsanulhasan" /d:sonar.token="$SONAR_TOKEN"
+          ${{ runner.temp }}/scanner/dotnet-sonarscanner begin /k:"rafsanulhasan_n8n_practice" /o:"rafsanulhasan" /d:sonar.token="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
           dotnet build
+          dotnet test --no-build --collect:"XPlat Code Coverage" --results-directory ./coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
           ${{ runner.temp }}/scanner/dotnet-sonarscanner end /d:sonar.token="$SONAR_TOKEN"
