feat: add N8nWebhookClient.Core project with models and webhook service implementation

--- a/n8n-blazor-frontend/N8nWebhookClient.UnitTests/N8nWebhookClient.UnitTests.csproj
+++ b/n8n-blazor-frontend/N8nWebhookClient.UnitTests/N8nWebhookClient.UnitTests.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\N8nWebhookClient\N8nWebhookClient.csproj" />
+    <ProjectReference Include="..\N8nWebhookClient.Core\N8nWebhookClient.Core.csproj" />
   </ItemGroup>
 
 </Project>
