feat: enhance unit tests for Counter and Home components, add logging verification for webhook service

--- a/n8n-blazor-frontend/N8nWebhookClient.UnitTests/N8nWebhookClient.UnitTests.csproj
+++ b/n8n-blazor-frontend/N8nWebhookClient.UnitTests/N8nWebhookClient.UnitTests.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\N8nWebhookClient.Core\N8nWebhookClient.Core.csproj" />
+    <ProjectReference Include="..\N8nWebhookClient\N8nWebhookClient.csproj" />
   </ItemGroup>
 
 </Project>
