feat: enhance mutation testing setup with SonarQube integration and quality gate enforcement

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: bash
         run: |
-          ${{ runner.temp }}/scanner/dotnet-sonarscanner begin /k:"rafsanulhasan_n8n_practice" /o:"rafsanulhasan" /d:sonar.token="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="**/coverage/**/coverage.opencover.xml" /d:sonar.coverage.exclusions="**/N8NWebhookClient/**,**/N8NWebhookClient.UnitTests/**,**/N8NWebhookClient.IntegrationTests/**,**/Program.cs,**/N8NModels.cs,**/*.razor" /d:sonar.exclusions="**/obj/**,**/bin/**,**/StrykerOutput/**,**/coverage/**" /d:sonar.tests="n8n-blazor-frontend/N8NWebhookClient.UnitTests,n8n-blazor-frontend/N8NWebhookClient.IntegrationTests" /d:sonar.test.inclusions="**/*Tests.cs"
+          ${{ runner.temp }}/scanner/dotnet-sonarscanner begin /k:"rafsanulhasan_n8n_practice" /o:"rafsanulhasan" /d:sonar.token="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="**/coverage/**/coverage.opencover.xml" /d:sonar.cs.stryker.reportsPaths="**/StrykerOutput/**/mutation-report.json" /d:sonar.coverage.exclusions="**/AgenticChat/**,**/AgenticChat.IntegrationTests/**,**/Program.cs,**/N8NModels.cs,**/*.razor" /d:sonar.exclusions="**/obj/**,**/bin/**,**/StrykerOutput/**,**/coverage/**" /d:sonar.tests="tests/Connector.UnitTests,tests/AgentiChat.IntegrationTests" /d:sonar.test.inclusions="**/*Tests.cs" /d:sonar.qualitygate.wait=true
           dotnet build
           dotnet test --no-build --collect:"XPlat Code Coverage" --results-directory ./coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
           ${{ runner.temp }}/scanner/dotnet-sonarscanner end /d:sonar.token="$SONAR_TOKEN"
@@ -53,19 +53,30 @@ jobs:
         shell: bash
         run: dotnet tool restore
 
-      - name: Run Mutation Tests (Unit Tests)
+      - name: Run Mutation Tests (Connector Unit Tests)
         shell: bash
         run: |
-          cd n8n-blazor-frontend/N8NWebhookClient.UnitTests
-          dotnet stryker --reporter html --reporter json --reporter cleartext
-        continue-on-error: true
+          cd tests/Connector.UnitTests
+          PROJECT_PATH=$(realpath ../../src/Connector/Connector.csproj)
+          dotnet stryker --project "$PROJECT_PATH" --reporter html --reporter json --reporter cleartext
+        continue-on-error: false
 
-      - name: Run Mutation Tests (Integration Tests)
+      - name: Check Mutation Score
         shell: bash
         run: |
-          cd n8n-blazor-frontend/N8NWebhookClient.IntegrationTests
-          dotnet stryker --reporter html --reporter json --reporter cleartext
-        continue-on-error: true
+          MUTATION_REPORT="tests/Connector.UnitTests/StrykerOutput/$(ls -t tests/Connector.UnitTests/StrykerOutput/ | head -n1)/reports/mutation-report.json"
+          if [ -f "$MUTATION_REPORT" ]; then
+            MUTATION_SCORE=$(jq -r '.files | to_entries | map(.value.mutationScore) | add / length' "$MUTATION_REPORT")
+            echo "Mutation Score: $MUTATION_SCORE%"
+            if (( $(echo "$MUTATION_SCORE < 80" | bc -l) )); then
+              echo "❌ Mutation score ($MUTATION_SCORE%) is below the required threshold of 80%"
+              exit 1
+            else
+              echo "✅ Mutation score ($MUTATION_SCORE%) meets the required threshold of 80%"
+            fi
+          else
+            echo "⚠️ Mutation report not found, skipping mutation score check"
+          fi
 
       - name: Upload Mutation Test Reports
         uses: actions/upload-artifact@v4
@@ -73,8 +84,58 @@ jobs:
         with:
           name: mutation-test-reports
           path: |
-            n8n-blazor-frontend/N8NWebhookClient.UnitTests/StrykerOutput/**/mutation-report.html
-            n8n-blazor-frontend/N8NWebhookClient.IntegrationTests/StrykerOutput/**/mutation-report.html
-            n8n-blazor-frontend/N8NWebhookClient.UnitTests/StrykerOutput/**/mutation-report.json
-            n8n-blazor-frontend/N8NWebhookClient.IntegrationTests/StrykerOutput/**/mutation-report.json
+            tests/Connector.UnitTests/StrykerOutput/**/mutation-report.html
+            tests/Connector.UnitTests/StrykerOutput/**/mutation-report.json
           retention-days: 30
+
+      - name: Comment Mutation Score on PR
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const path = require('path');
+
+            try {
+              const strykerOutputDir = 'tests/Connector.UnitTests/StrykerOutput';
+              const dirs = fs.readdirSync(strykerOutputDir).sort().reverse();
+              const latestReport = path.join(strykerOutputDir, dirs[0], 'reports', 'mutation-report.json');
+              
+              if (fs.existsSync(latestReport)) {
+                const report = JSON.parse(fs.readFileSync(latestReport, 'utf8'));
+                const mutationScore = report.files 
+                  ? Object.values(report.files)
+                      .map(f => f.mutationScore || 0)
+                      .reduce((a, b) => a + b, 0) / Object.keys(report.files).length
+                  : 0;
+                
+                const status = mutationScore >= 80 ? '✅' : '❌';
+                const threshold = mutationScore >= 80 ? 'PASSED' : 'FAILED';
+                
+                const body = `## ${status} Mutation Testing Report
+                
+                **Mutation Score:** ${mutationScore.toFixed(2)}%
+                **Quality Gate:** ${threshold} (Threshold: 80%)
+                
+                | Metric | Value |
+                |--------|-------|
+                | Killed Mutants | ${report.killed || 0} |
+                | Survived Mutants | ${report.survived || 0} |
+                | Timeout Mutants | ${report.timeout || 0} |
+                | No Coverage | ${report.noCoverage || 0} |
+                
+                ${mutationScore < 80 ? '⚠️ **Action Required:** Mutation score is below 80%. Please improve test coverage before merging.' : '🎉 **Great job!** Mutation score exceeds the required threshold.'}
+                
+                [View Full Report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+                `;
+                
+                github.rest.issues.createComment({
+                  issue_number: context.issue.number,
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  body: body
+                });
+              }
+            } catch (error) {
+              console.log('Could not post mutation score comment:', error.message);
+            }
